# Test-Template

./: .flake8  .gitignore  LICENSE  pyproject.toml  readme.md  requirements-dev.txt
.github/workflows/: ci.yaml
