[tool.black]
line-length = 88
target-version = ["py311"]
#exclude = '''
#/path/to/dir/.*
#'''

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "team_shared_lib"
version = "0.1.0"
description = "Shared Python utilities for the team"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Iot Team Alpha" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shared_lib = ["py.typed"]